[package]
name = "tag-vec"
version = "0.0.2"
description = "A vector used for storing tags"
authors = ["TrolledWoods <trolledwoods@gmail.com>"]
edition = "2018"
license-file = "LICENSE"
repository = "https://github.com/TrolledWoods/tag-vec"
readme = "README.md"
keywords = ["tag", "tags", "vec", "vector"]
categories = ["data-structures"]

[dependencies]
